@@ -30,8 +30,8 @@ import java.util.stream.IntStream;
 import org.astraea.common.DataRate;
 import org.astraea.common.Utils;
 import org.astraea.common.admin.Admin;
+import org.astraea.common.admin.Broker;
 import org.astraea.common.admin.BrokerConfigs;
-import org.astraea.common.admin.NodeInfo;
 import org.astraea.common.admin.TopicConfigs;
 import org.astraea.common.admin.TopicPartition;
 import org.astraea.common.json.JsonConverter;
@@ -55,13 +55,13 @@ public class ThrottleHandlerTest {
   public void cleanup() {
     try (var admin = Admin.of(SERVICE.bootstrapServers())) {
       admin
-          .nodeInfos()
+          .brokers()
           .thenApply(
               ns ->
                   ns.stream()
                       .collect(
                           Collectors.toMap(
-                              NodeInfo::id,
+                              Broker::id,
                               ignored ->
                                   Set.of(
                                       BrokerConfigs.LEADER_REPLICATION_THROTTLED_RATE_CONFIG,
@@ -176,9 +176,7 @@ public class ThrottleHandlerTest {
               handler.get(Channel.EMPTY).toCompletableFuture().join());
 
       var topic =
-          throttleSetting.topics.stream()
-              .filter(t -> t.name.get().equals(topicName))
-              .collect(Collectors.toList());
+          throttleSetting.topics.stream().filter(t -> t.name.get().equals(topicName)).toList();
       Assertions.assertEquals(2, topic.size());
 
       var leader =
@@ -228,9 +226,7 @@ public class ThrottleHandlerTest {
               ThrottleHandler.ThrottleSetting.class,
               handler.get(Channel.EMPTY).toCompletableFuture().join());
       var topic =
-          throttleSetting.topics.stream()
-              .filter(t -> t.name.get().equals(topicName))
-              .collect(Collectors.toList());
+          throttleSetting.topics.stream().filter(t -> t.name.get().equals(topicName)).toList();
       Assertions.assertEquals(9, topic.size());
 
       IntStream.range(0, 3)
@@ -513,11 +509,11 @@ public class ThrottleHandlerTest {
       Runnable setThrottle =
           () -> {
             admin
-                .nodeInfos()
+                .brokers()
                 .thenApply(
                     ns ->
                         ns.stream()
-                            .map(NodeInfo::id)
+                            .map(Broker::id)
                             .collect(
                                 Collectors.toMap(
                                     n -> n,
